# LaMoWork

./: CMakeLists.txt
LamoEngine/: camera.cpp  camera.h  core.cpp  core.h  entity.cpp  entity.h  input.cpp  input.h  renderer.cpp  renderer.h  resourcemanager.cpp  resourcemanager.h  scene.cpp  scene.h  scenemanager.cpp  scenemanager.h  sprite.cpp
LamoEngine/Core/: core.cpp  core.h  input.h  scenemanager.cpp  scenemanager.h
LamoEngine/Renderer/: camera.cpp  camera.h  entity.cpp  entity.h  renderer.cpp  renderer.h  resourcemanager.cpp  scene.h
LamoEngine/Sprite/: sprite.cpp  sprite.h
LamoEngine/Textures/: texture.cpp  texture.h
demo/: Main.cpp  newScene.cpp  newScene.h
